# turbo-cli

./: AGENTS.md  GITHUB_UPLOAD.md  README.md  README_GITHUB.md  README_INSTALL.md  package_engine.py  pyproject.toml  setup.bat  setup.py
src/turbo/: cli.py  engine.py
src/turbo_cli.egg-info/: PKG-INFO  SOURCES.txt
turboquant_plus/: LICENSE  PLAN.md  README.md
turboquant_plus/benchmarks/: benchmark_llama.sh  benchmark_norm_correction.py  benchmark_ppl_tq_vs_rq.py  test_outlier_comparison.py  test_with_llama.py  validate_real_model.py
turboquant_plus/docs/: attention-gated-optimizations.md  experiment-layer-adaptive.md  getting-started.md  kl-divergence-results.md  long-context-sparse-v-validation.md  m2-ppl-investigation.md  quality-benchmarks.md  smem-dequant-experiment.md  sparse-v-upstream-validation.md  speed-experiments.md  test-suite-definition.md  turbo4-investigation.md  turbo4-next-steps.md  turbo4-profiling-plan.md  weight-compression-results.md  windows-rdna4-setup.md
turboquant_plus/docs/papers/: block-size-experiment.md  layer-aware-v-compression.md  m5-max-stress-test.md  moe-v-compression-frontier.md  turbo4-resurrection.md  weight-compression-tq4.md
turboquant_plus/scripts/: measure_skip_rate.py  mlx_lora_to_gguf.sh  turbo-quick-bench.sh
turboquant_plus/tests/: test_kv_cache.py  test_outlier.py  test_polar_quant.py  test_qjl.py  test_turbo4.py  test_turboquant.py
turboquant_plus/turboquant/: __init__.py  kv_cache.py  outlier.py  polar_quant.py  qjl.py  turboquant.py  utils.py
(+33 files in other folders)
